# Homework_5

./: README.md  catalog.json  pyproject.toml  requirements.txt  students_fixture.json
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_number_of_views.py  0003_alter_blog_number_of_views.py  0004_alter_blog_publication_sign.py
blog/templates/blog/: base.html
catalog/: admin.py  constanta.py  forms.py  models.py  services.py  urls.py  views.py
catalog/mangement/comands/: add_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/: base.html  contacts.html  home.html  product_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/: base.html  footer.html  header.html  product_detail.html  product_list.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py
users/management/comands/: add_admin.py
users/migrations/: 0001_initial.py
users/templates/: logout.html
