[tool.poetry]
name = "homework-5"
version = "0.1.0"
description = ""
authors = ["Andrey <mr.dryn4er@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
